--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import "./button.css";
+@import "./header.css";
 :root {
   --fontBase: "Poppins", sans-serif;
   --headline1: bold 95px / 153.71px var(--fontBase);
@@ -17,6 +19,7 @@
     linear-gradient(135deg, #72edf2 0%, #5151e5 100%);
   --purple: #310a90;
   --green: #42e2b8;
+  --white: white;
 }
 body {
   background: var(--gradient);
