Added icons, photo and text

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,6 @@
 @import "./button.css";
+@import "./button-icon.css";
+@import "./hero.css";
 @import "./header.css";
 :root {
   --fontBase: "Poppins", sans-serif;
@@ -25,7 +27,7 @@ body {
   background: var(--gradient);
   min-block-size: 100vh;
   font: var(--body1);
-  color: var(--green);
+  color: var(--purple);
 }
 .header {
   display: flex;
