--- a/css/button.css
+++ b/css/button.css
@@ -1,6 +1,7 @@
 .button {
   background: var(--purple);
   color: var(--white);
+  font: var(--button);
   padding-inline-start: 24px;
   padding-inline-end: 24px;
   padding-block-start: 24px;
@@ -8,15 +9,10 @@
   border-radius: 4px;
   text-transform: uppercase;
   border: none;
+  text-decoration: none;
 }
-.button-is-secondary {
-  background: none;
+.button.is-secondary {
+  background: unset;
   color: var(--purple);
-  padding-inline-start: 24px;
-  padding-inline-end: 24px;
-  padding-block-start: 24px;
-  padding-block-end: 24px;
-  border-radius: 4px;
-  text-transform: uppercase;
   border: 2px solid var(--purple);
 }
