--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,10 @@
 @import "./button.css";
 @import "./button-icon.css";
-@import "./hero.css";
 @import "./header.css";
+@import "./hero.css";
+@import "./wrapper.css";
+@import "./menu.css";
+
 :root {
   --fontBase: "Poppins", sans-serif;
   --headline1: bold 95px / 153.71px var(--fontBase);
@@ -28,8 +31,4 @@ body {
   min-block-size: 100vh;
   font: var(--body1);
   color: var(--purple);
-}
-.header {
-  display: flex;
-  justify-content: space-between;
 }
