--- a/css/button-icon.css
+++ b/css/button-icon.css
@@ -1,7 +1,7 @@
 .button-icon {
   padding: 10px;
   border-radius: 4px;
-  border: 2px solid var(--purple);
+  border: 2px solid black;
   background: white;
   text-decoration: none;
   display: inline-block;
