--- a/css/button.css
+++ b/css/button.css
@@ -6,9 +6,9 @@
   padding-inline-end: 24px;
   padding-block-start: 24px;
   padding-block-end: 24px;
-  border-radius: 4px;
+  border-radius: 90px;
   text-transform: uppercase;
-  border: none;
+  border: 1px solid white;
   text-decoration: none;
   text-align: center;
 }
