--- a/css/header.css
+++ b/css/header.css
@@ -2,10 +2,12 @@
   position: sticky;
   top: 0;
   backdrop-filter: blur(10px);
+  margin-block-start: 10px;
+  margin-block-end: 10px;
 }
 .header-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  block-size: 80px;
+  block-size: 130px;
 }
