--- a/css/button.css
+++ b/css/button.css
@@ -11,6 +11,7 @@
   border: 1px solid white;
   text-decoration: none;
   text-align: center;
+  cursor: pointer;
 }
 .button.is-secondary {
   background: unset;
